--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Test::Roo - Composable tests with roles and Moo
 
 VERSION
-    version 0.001
+    version 0.002
 
 SYNOPSIS
     A test file:
@@ -101,8 +101,57 @@ USAGE
     You can even call test functions in these, for example, to confirm that
     something has been set up or cleaned up.
 
-  Imported functions
-   test
+  Running tests
+    The simplest way to use Test::Roo is to make the "main" package in your
+    test file the test class and call "run_tests" in it:
+
+        # t/test.t
+        use Test::Roo; # loads Moo and Test::More
+
+        use lib 't/lib';
+
+        has class => (
+            is      => 'ro',
+            default => sub { "Digest::MD5" },
+        );
+
+        run_tests(qw/MyTestRole/);
+
+    If you do this, however, you can't specify arguments to the test class
+    constructor and can only run the test class once.
+
+    Alternatively, you can create a separate package (in the test file or in
+    a separate ".pm" file) and create and run the test objects yourself:
+
+        # t/test.t
+        package MyTest;
+        use Test::Roo;
+
+        use lib 't/lib';
+
+        has class => (
+            is       => 'ro',
+            required => 1,
+        );
+
+        with 'MyTestRole';
+
+        package main;
+        use strictures;
+        use Test::More;
+
+        for my $c ( qw/Digest::MD5 Digest::SHA/ ) {
+            my $obj = new_ok( 'MyTest', [class => $c] );
+            $obj->run_me;
+        }
+
+        done_testing;
+
+    Note that, in this case, you will need to compose your own roles with
+    "with" and call "done_testing" yourself.
+
+FUNCTIONS
+  test
         test $label => sub { ... };
 
     The "test" function adds a subtest. The code reference will be called
@@ -112,23 +161,36 @@ USAGE
     will depend on when they are composed relative to other test
     declarations.
 
-   run_tests
-        run_tests( @optional_roles );
+  run_tests
+        run_tests( @optional_roles  );
 
     The "run_tests" function composes an optional list of roles into the
-    current package, creates an object, calls the setup method (triggering
-    modifiers), runs the tests, calls the teardown method (triggering
-    modifiers), and calls "done_testing".
+    calling package, creates an object without arguments, calls the "run_me"
+    method on it, and calls "done_testing".
 
     Because this is usually at the end of the test file, all attributes,
     tests and method modifiers in the main test file will be set up before
     roles are composed. If this isn't what you want, use "with" earlier in
     the file and omit the role from the arguments to "run_tests".
 
-  Stub methods
-    Loading Test::Roo imports three stub methods, "setup", "teardown" and
-    "do_it". These are used to anchor method modifiers in the testing class
-    and should not be modified directly.
+    Because it calls "done_testing", it may only be called once for a given
+    test class.
+
+IMPORTED METHODS
+    Loading Test::Roo imports several subroutines into the calling package
+    to create required default methods.
+
+  run_me
+        $obj->run_me;
+
+    This method runs the setup method (triggering modifiers), runs the
+    tests, and calls the teardown method (triggering modifiers). It is
+    called by the "run_tests" function, or you can call it yourself after
+    composing roles with "with".
+
+  setup, teardown, my_tests
+    These are used to anchor method modifiers in the testing class and
+    should not be otherwise modified or called directly.
 
 SUPPORT
   Bugs / Feature Requests
